--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,21 @@
   }
 }
 
+.tsparticles-canvas-el{
+
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+  text-transform: capitalize;
+}
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  z-index: 3 !important;
+
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
 }
 
 .App-link {
